# ro-sham-bo

./: .cursorignore  .gitignore  README.md
.github/workflows/: develop.yml  main.yml
_bmad-output/brainstorming/: brainstorming-session-2026-02-05.md
_bmad-output/implementation-artifacts/: tech-spec-seeker-mobile-hello-world-first-screen.md  tech-spec-wip.md
_bmad-output/planning-artifacts/: product-brief-seeker-rps-2026-02-05.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
android/: README.md  build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/develop/res/values/: strings.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/prod/res/values/: strings.xml
api/: API_SECURITY_IDEAS.md  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
api/idls/: rps_escrow.json
api/src/: auth.rs  config.rs  error.rs  games.rs  health.rs  lib.rs  main.rs  solana.rs
programs/rps-escrow/: .gitignore  Anchor.toml  package.json  txtx.yml
programs/rps-escrow/programs/rps-escrow/: Cargo.toml
programs/rps-escrow/programs/rps-escrow/src/: errors.rs  lib.rs
programs/rps-escrow/programs/rps-escrow/src/instructions/: mod.rs  (+5 more)
programs/rps-escrow/runbooks/: README.md
programs/rps-escrow/runbooks/deployment/: main.tx  signers.devnet.tx
programs/rps-escrow/runbooks/refund/: main.tx  signers.devnet.tx
programs/rps-escrow/runbooks/resolve/: signers.devnet.tx  signers.mainnet.tx
programs/rps-escrow/tests/: rps-escrow.ts
(+28 files in other folders)
